--- a/videos.html
+++ b/videos.html
@@ -106,7 +106,7 @@
 
   <main>
     <section class="video-section">
-      <h3 class="tituloPrincipal">Nuestros Videos</h3>
+      <h3 class="tituloPrincipal">Nuestros Trabajos</h3>
 
       <div class="carousel-container">
         <button class="carousel-btn prev" onclick="moverCarrusel(-1)">&#10094;</button>
