--- a/index.html
+++ b/index.html
@@ -3,174 +3,85 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vidrio y Aluminio Gomez</title>
+  <title>Login - Vidrio y Aluminio Gomez</title>
 
   <link rel="stylesheet" href="reset.css" />
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
 
   <style>
-    img {
-      max-width: 100%;
-      height: auto;
-      display: block;
+    body {
+      font-family: 'Montserrat', sans-serif;
+      background: #f4f4f4;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
     }
 
-    /* 🔹 Sección comentarios sobre banner */
-    .comentarios-overlay {
-      position: absolute;
-      top: 15%;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 90%;
-      max-width: 600px;
-      max-height: 70%;
-      overflow-y: auto;
-      background: rgba(0, 0, 0, 0.6);
-      color: white;
-      padding: 10px;
-      border-radius: 8px;
-      z-index: 500;
-    }
-    .comentario {
-      background: rgba(255, 255, 255, 0.1);
-      padding: 5px;
-      margin: 5px 0;
-      border-radius: 4px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-    .comentario p {
-      margin: 0;
-      flex: 1;
-    }
-    .comentario button {
-      background: red;
-      color: white;
-      border: none;
-      cursor: pointer;
-      padding: 3px 6px;
-      border-radius: 4px;
-      margin-left: 10px;
-    }
-    textarea {
+    .login-box {
+      background: #fff;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0px 4px 10px rgba(0,0,0,0.2);
+      max-width: 400px;
       width: 100%;
+      text-align: center;
+    }
+
+    .login-box h2 {
+      margin-bottom: 20px;
+    }
+
+    .login-box input {
+      width: 100%;
+      padding: 12px;
+      margin: 10px 0;
+      border: 1px solid #ddd;
+      border-radius: 6px;
+    }
+
+    .login-box button {
+      background: #007bff;
+      color: #fff;
+      border: none;
+      padding: 12px;
+      width: 100%;
+      border-radius: 6px;
+      cursor: pointer;
       margin-top: 10px;
     }
-    #formComentario button {
-      margin-top: 5px;
-      padding: 5px 10px;
-      cursor: pointer;
+
+    .login-box button:hover {
+      background: #0056b3;
     }
 
-    /* 🔹 El menú siempre visible arriba */
-    header {
-      position: relative;
-      z-index: 1000;
+    .logout-btn {
+      background: #dc3545;
+      margin-top: 15px;
+    }
+
+    .mensaje {
+      margin-top: 15px;
+      font-size: 14px;
+      color: red;
     }
   </style>
 </head>
-
 <body>
-  <header>
-    <div class="caja">
-      <h1>
-        <img src="imagenes/logo.png" style="width: 50px; height: auto;" />
-      </h1>
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="productos.html">Productos</a></li>
-          <li><a href="contacto.html">Contacto</a></li>
-          <li><a href="videos.html">Videos</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-
-  <!-- Banner con comentarios integrados -->
-  <div style="position: relative;">
-    <img class="banner" src="banner.jpg" alt="Banner principal" />
-    <div class="comentarios-overlay">
-      <h3>Comentarios</h3>
-      <form id="formComentario">
-        <textarea id="nuevoComentario" placeholder="Escribe tu comentario..."></textarea>
-        <button type="submit">Enviar</button>
-      </form>
-      <div id="listaComentarios"></div>
-    </div>
+  <div class="login-box">
+    <h2>Acceso Administrador</h2>
+    <input type="email" id="email" placeholder="Correo" />
+    <input type="password" id="password" placeholder="Contraseña" />
+    <button onclick="login()">Iniciar Sesión</button>
+    <button class="logout-btn" onclick="logout()">Cerrar Sesión</button>
+    <p id="mensaje" class="mensaje"></p>
   </div>
 
-  <main>
-    <section class="principal">
-      <h2 class="tituloPrincipal">Sobre Vidrio y Aluminio Gomez</h2>
-      <img class="utensilios" src="utensilios[1].jpg" alt="utensilios de un barbero">
-      <p>
-        Ubicada en San Pablo Autopan,
-        <strong>Soluciones en Vidrio y Aluminio Gomez</strong> trae para el mercado lo
-        mejor para su hogar y negocio. Fundada en 2008, cuenta con cancelería de aluminio, fachadas y sistemas de cristal templado, entre otras cosas. 
-      </p>
-      <p id="mision">
-        <em>
-          Nuestra misión es:
-          <strong>"Proporcionar eficiencia, economía y calidad a nuestros clientes".</strong>
-        </em>
-      </p>
-      <p>
-        Ofrecemos profesionales experimentados que están constantemente
-        observando los cambios y movimiento en el mundo de la cancelería, para así
-        ofrecer a nuestros clientes las últimas tendencias. La constante actualización
-        por parte de nuestros trabajadores nos hace brindar excelencia y agilidad, garantizando calidad y
-        satisfacción.
-      </p>
-    </section>
-
-    <section class="mapa">
-      <h3 class="tituloPrincipal">Nuestra Ubicación</h3>
-      <p>Nuestro establecimiento está ubicado en San Pablo Autopan</p>
-      <div class="mapaContenido">
-        <iframe 
-          src="https://www.google.com/maps/embed?pb=!4v1755183114469!6m8!1m7!1sQDyybB8MXeXDPR4yKU0Dsw!2m2!1d19.37172830916202!2d-99.65900973173885!3f253.42477900915722!4f-0.37270352146015284!5f0.7820865974627469"        
-          width="100%" 
-          height="300" 
-          style="border:0;" 
-          allowfullscreen="" 
-          loading="lazy" 
-          referrerpolicy="no-referrer-when-downgrade">
-        </iframe>
-      </div>
-    </section>
-
-    <section class="diferenciales">
-      <h3 class="tituloPrincipal">Nuestro Distintivo</h3>
-      <div class="contenidoDiferenciales">
-        <ul class="listaDiferenciales">
-          <li class="items">Atención personalizada</li>
-          <li class="items">Presupuestos flexibles</li>
-          <li class="items">Localización</li>
-          <li class="items">Profesionales calificados</li>
-          <li class="items">Puntualidad</li>
-          <li class="items">Limpieza e higiene</li>
-          <li class="items">Trabajos garantizados</li>
-        </ul>
-        <img src="diferenciales.jpg" class="imagenDiferencial" alt="imagen de trabajos" />
-      </div>
-    </section>
-  </main>
-
-  <footer>
-    <img src="imagenes/logo-blanco.png" alt="Logo blanco" />
-    <p>Copyright: Todo el material expuesto es propiedad de Vidrio y Aluminio Gomez 2025</p>
-  </footer>
-
-  <!-- Firebase SDKs -->
+  <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth-compat.js"></script>
 
   <script>
-    // 🔹 Configuración Firebase
     const firebaseConfig = {
       apiKey: "AIzaSyAK5lHln3Xa-OjzO7QoE3U2THxJt59A7vE",
       authDomain: "vidrio-aluminio-gomez.firebaseapp.com",
@@ -181,70 +92,30 @@
     };
 
     firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
     const auth = firebase.auth();
 
-    const form = document.getElementById("formComentario");
-    const input = document.getElementById("nuevoComentario");
-    const lista = document.getElementById("listaComentarios");
-
-    let currentUser = null;
-
-    // 🔹 Detectar estado de autenticación
-    auth.onAuthStateChanged(user => {
-      currentUser = user;
-      renderComentarios();
-    });
-
-    // 🔹 Enviar comentario
-    form.addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const texto = (input.value || "").trim();
-      if (!texto) return;
+    async function login() {
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
+      const mensaje = document.getElementById("mensaje");
 
       try {
-        await db.collection("comentarios").add({
-          texto: texto,
-          timestamp: firebase.firestore.FieldValue.serverTimestamp()
-        });
-        input.value = "";
-      } catch (err) {
-        console.error("Error al guardar:", err);
-        alert("No se pudo guardar el comentario. Intenta de nuevo.");
+        await auth.signInWithEmailAndPassword(email, password);
+        mensaje.style.color = "green";
+        mensaje.textContent = "Acceso correcto. Redirigiendo...";
+        setTimeout(() => {
+          window.location.href = "index.html";
+        }, 1500);
+      } catch (error) {
+        mensaje.style.color = "red";
+        mensaje.textContent = "Error: " + error.message;
       }
-    });
+    }
 
-    // 🔹 Mostrar comentarios y solo permitir eliminar al admin
-    function renderComentarios() {
-      db.collection("comentarios")
-        .orderBy("timestamp", "desc")
-        .onSnapshot((snap) => {
-          lista.innerHTML = "";
-          snap.forEach((doc) => {
-            const data = doc.data();
-            const div = document.createElement("div");
-            div.className = "comentario";
-
-            const p = document.createElement("p");
-            p.textContent = data.texto || "";
-
-            div.appendChild(p);
-
-            // Mostrar botón de eliminar solo si está logueado el admin
-            if (currentUser) {
-              const btn = document.createElement("button");
-              btn.textContent = "❌";
-              btn.onclick = async () => {
-                if (confirm("¿Eliminar este comentario?")) {
-                  await db.collection("comentarios").doc(doc.id).delete();
-                }
-              };
-              div.appendChild(btn);
-            }
-
-            lista.appendChild(div);
-          });
-        });
+    async function logout() {
+      await auth.signOut();
+      document.getElementById("mensaje").style.color = "blue";
+      document.getElementById("mensaje").textContent = "Sesión cerrada";
     }
   </script>
 </body>
