--- a/index.html
+++ b/index.html
@@ -10,81 +10,23 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
 
   <style>
-    img {
-      max-width: 100%;
-      height: auto;
-      display: block;
-    }
-
-    .video {
-      max-width: 800px;
-      margin: 30px auto;
-      text-align: center;
-    }
-
-    .video-frame {
-      position: relative;
-      padding-bottom: 56.25%;
-      height: 0;
-      overflow: hidden;
-    }
-
-    .video-frame iframe {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      border: none;
-    }
-
-    .video-controles {
-      margin-top: 10px;
-    }
-
-    .video-controles button {
-      padding: 10px 20px;
-      margin: 0 10px;
-      font-size: 16px;
-      cursor: pointer;
-    }
+    img { max-width: 100%; height: auto; display: block; }
+    .video { max-width: 800px; margin: 30px auto; text-align: center; }
+    .video-frame { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; }
+    .video-frame iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none; }
+    .video-controles { margin-top: 10px; }
+    .video-controles button { padding: 10px 20px; margin: 0 10px; font-size: 16px; cursor: pointer; }
 
     @media (max-width: 768px) {
-      .caja nav ul {
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-        align-items: center;
-        padding: 0;
-      }
-
-      .contenidoDiferenciales {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-      }
-
-      .imagenDiferencial {
-        margin-top: 20px;
-        width: 100%;
-      }
-
-      .utensilios {
-        width: 100%;
-        margin: 20px auto;
-      }
-
-      .tituloPrincipal {
-        font-size: 1.4em;
-        text-align: center;
-      }
-
-      .mapaContenido iframe {
-        height: 250px;
-      }
+      .caja nav ul { display: flex; flex-direction: column; gap: 10px; align-items: center; padding: 0; }
+      .contenidoDiferenciales { display: flex; flex-direction: column; align-items: center; }
+      .imagenDiferencial { margin-top: 20px; width: 100%; }
+      .utensilios { width: 100%; margin: 20px auto; }
+      .tituloPrincipal { font-size: 1.4em; text-align: center; }
+      .mapaContenido iframe { height: 250px; }
     }
 
-    /* 🔹 Estilos comentarios */
+    /* Comentarios overlay sobre banner */
     .comentarios-overlay {
       position: absolute;
       top: 15%;
@@ -109,57 +51,24 @@
       justify-content: space-between;
       align-items: center;
     }
-    .comentario p {
-      margin: 0;
-      flex: 1;
-    }
-    .delete-btn {
-      background: red;
-      color: white;
-      border: none;
-      cursor: pointer;
-      padding: 3px 6px;
-      border-radius: 4px;
-      margin-left: 10px;
-      display: none; /* 🔹 oculto por defecto */
-    }
-    textarea {
-      width: 100%;
-      margin-top: 10px;
-    }
-    #formComentario button {
-      margin-top: 5px;
-      padding: 5px 10px;
-      cursor: pointer;
-    }
+    .comentario p { margin: 0; flex: 1; }
+    .comentario button { background: red; color: white; border: none; cursor: pointer; padding: 3px 6px; border-radius: 4px; margin-left: 10px; }
+    textarea { width: 100%; margin-top: 10px; }
+    #formComentario button { margin-top: 5px; padding: 5px 10px; cursor: pointer; }
 
-    /* 🔹 El menú siempre visible arriba */
-    header {
-      position: relative;
-      z-index: 1000;
-    }
+    /* Botones login/logout */
+    .auth-buttons { position: absolute; top:10px; right:10px; z-index: 1000; }
+    .auth-buttons button { padding: 5px 10px; cursor: pointer; margin-left: 5px; }
+
+    /* Mantener menú encima */
+    header { position: relative; z-index: 1000; }
   </style>
 </head>
 
 <body>
-  <!-- 🔹 Login en esquina superior derecha -->
-  <div id="login-box" style="position: absolute; top: 10px; right: 20px; background: rgba(255,255,255,0.9); padding: 10px; border-radius: 8px; box-shadow: 0 0 8px rgba(0,0,0,0.2); font-family: Montserrat, sans-serif; z-index:2000;">
-    <div id="login-form">
-      <input type="email" id="login-email" placeholder="Correo" style="padding: 5px; margin-bottom: 5px; width: 160px;"><br>
-      <input type="password" id="login-password" placeholder="Contraseña" style="padding: 5px; margin-bottom: 5px; width: 160px;"><br>
-      <button onclick="login()" style="padding: 5px 10px;">Ingresar</button>
-    </div>
-    <div id="logout-form" style="display:none;">
-      <p style="margin: 0; font-size: 14px;">Sesión iniciada</p>
-      <button onclick="logout()" style="padding: 5px 10px; margin-top: 5px;">Cerrar sesión</button>
-    </div>
-  </div>
-
   <header>
     <div class="caja">
-      <h1>
-        <img src="imagenes/logo.png" style="width: 50px; height: auto;" />
-      </h1>
+      <h1><img src="imagenes/logo.png" style="width: 50px; height: auto;" /></h1>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
@@ -168,6 +77,11 @@
           <li><a href="videos.html">Videos</a></li>
         </ul>
       </nav>
+      <!-- Login/Logout admin -->
+      <div class="auth-buttons">
+        <button id="loginBtn">Iniciar sesión</button>
+        <button id="logoutBtn" style="display:none;">Cerrar sesión</button>
+      </div>
     </div>
   </header>
 
@@ -185,51 +99,25 @@
   </div>
 
   <main>
+    <!-- resto de secciones se mantiene igual -->
     <section class="principal">
       <h2 class="tituloPrincipal">Sobre Vidrio y Aluminio Gomez</h2>
       <img class="utensilios" src="utensilios[1].jpg" alt="utensilios de un barbero">
-
-      <p>
-        Ubicada en San Pablo Autopan,
-        <strong>Soluciones en Vidrio y Aluminio Gomez</strong> trae para el mercado lo
-        mejor para su hogar y negocio. Fundada en 2008, cuenta con cancelería de aluminio, fachadas y sistemas de cristal templado, entre otras cosas. 
-      </p>
-
-      <p id="mision">
-        <em>
-          Nuestra misión es:
-          <strong>"Proporcionar eficiencia, economía y calidad a nuestros clientes".</strong>
-        </em>
-      </p>
-
-      <p>
-        Ofrecemos profesionales experimentados que están constantemente
-        observando los cambios y movimiento en el mundo de la cancelería, para así
-        ofrecer a nuestros clientes las últimas tendencias. La constante actualización
-        por parte de nuestros trabajadores nos hace brindar excelencia y agilidad, garantizando calidad y
-        satisfacción.
-      </p>
+      <p>Ubicada en San Pablo Autopan, <strong>Soluciones en Vidrio y Aluminio Gomez</strong> trae para el mercado lo mejor para su hogar y negocio. Fundada en 2008, cuenta con cancelería de aluminio, fachadas y sistemas de cristal templado, entre otras cosas.</p>
+      <p id="mision"><em>Nuestra misión es: <strong>"Proporcionar eficiencia, economía y calidad a nuestros clientes".</strong></em></p>
+      <p>Ofrecemos profesionales experimentados que están constantemente observando los cambios y movimiento en el mundo de la cancelería, para así ofrecer a nuestros clientes las últimas tendencias. La constante actualización por parte de nuestros trabajadores nos hace brindar excelencia y agilidad, garantizando calidad y satisfacción.</p>
     </section>
 
     <section class="mapa">
       <h3 class="tituloPrincipal">Nuestra Ubicación</h3>
       <p>Nuestro establecimiento está ubicado en San Pablo Autopan</p>
       <div class="mapaContenido">
-        <iframe 
-          src="https://www.google.com/maps/embed?pb=!4v1755183114469!6m8!1m7!1sQDyybB8MXeXDPR4yKU0Dsw!2m2!1d19.37172830916202!2d-99.65900973173885!3f253.42477900915722!4f-0.37270352146015284!5f0.7820865974627469"        
-          width="100%" 
-          height="300" 
-          style="border:0;" 
-          allowfullscreen="" 
-          loading="lazy" 
-          referrerpolicy="no-referrer-when-downgrade">
-        </iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!4v1755183114469!6m8!1m7!1sQDyybB8MXeXDPR4yKU0Dsw!2m2!1d19.37172830916202!2d-99.65900973173885!3f253.42477900915722!4f-0.37270352146015284!5f0.7820865974627469" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
       </div>
     </section>
 
     <section class="diferenciales">
       <h3 class="tituloPrincipal">Nuestro Distintivo</h3>
-
       <div class="contenidoDiferenciales">
         <ul class="listaDiferenciales">
           <li class="items">Atención personalizada</li>
@@ -250,117 +138,24 @@
     <p>Copyright: Todo el material expuesto es propiedad de Vidrio y Aluminio Gomez 2025</p>
   </footer>
 
-  <!-- Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore-compat.js"></script>
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js"></script>
 
   <script>
-    // 🔹 Configuración de Firebase
+    // 🔹 Config Firebase
     const firebaseConfig = {
-      apiKey: "AIzaSyAK5lHln3Xa-OjzO7QoE3U2THxJt59A7vE",
-      authDomain: "vidrio-aluminio-gomez.firebaseapp.com",
-      projectId: "vidrio-aluminio-gomez",
-      storageBucket: "vidrio-aluminio-gomez.firebasestorage.app",
-      messagingSenderId: "8738704393",
-      appId: "1:8738704393:web:d40335060e366f01a47cd8"
+      apiKey: "TU_API_KEY",
+      authDomain: "TU_DOMINIO.firebaseapp.com",
+      projectId: "TU_PROJECT_ID",
+      storageBucket: "TU_PROJECT_ID.appspot.com",
+      messagingSenderId: "TU_MESSAGING_SENDER_ID",
+      appId: "TU_APP_ID"
     };
-
-    firebase.initializeApp(firebaseConfig);
+    const app = firebase.initializeApp(firebaseConfig);
     const db = firebase.firestore();
+    const auth = firebase.auth();
 
-    const form = document.getElementById("formComentario");
-    const input = document.getElementById("nuevoComentario");
-    const lista = document.getElementById("listaComentarios");
-
-    form.addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const texto = (input.value || "").trim();
-      if (!texto) return;
-
-      try {
-        await db.collection("comentarios").add({
-          texto: texto,
-          timestamp: firebase.firestore.FieldValue.serverTimestamp()
-        });
-        input.value = "";
-      } catch (err) {
-        console.error("Error al guardar:", err);
-        alert("No se pudo guardar el comentario. Intenta de nuevo.");
-      }
-    });
-
-    db.collection("comentarios")
-      .orderBy("timestamp", "desc")
-      .onSnapshot((snap) => {
-        lista.innerHTML = "";
-        snap.forEach((doc) => {
-          const data = doc.data();
-          const div = document.createElement("div");
-          div.className = "comentario";
-
-          const p = document.createElement("p");
-          p.textContent = data.texto || "";
-
-          const btn = document.createElement("button");
-          btn.textContent = "❌";
-          btn.className = "delete-btn";
-          btn.onclick = async () => {
-            if (confirm("¿Eliminar este comentario?")) {
-              await db.collection("comentarios").doc(doc.id).delete();
-            }
-          };
-
-          div.appendChild(p);
-          div.appendChild(btn);
-          lista.appendChild(div);
-        });
-      });
-  </script>
-
-  <!-- 🔹 Script de autenticación -->
-  <script type="module">
-    import { getAuth, signInWithEmailAndPassword, signOut, onAuthStateChanged } 
-      from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
-
-    const auth = getAuth();
-    const adminUID = "DT4rWh1wDcbStfWizorQh8Sniks1"; // 🔹 Reemplaza con tu UID real
-
-    window.login = function() {
-      const email = document.getElementById("login-email").value;
-      const password = document.getElementById("login-password").value;
-      signInWithEmailAndPassword(auth, email, password)
-        .catch((error) => {
-          alert("Error: " + error.message);
-        });
-    };
-
-    window.logout = function() {
-      signOut(auth);
-    };
-
-    onAuthStateChanged(auth, (user) => {
-      if (user) {
-        document.getElementById("login-form").style.display = "none";
-        document.getElementById("logout-form").style.display = "block";
-
-        document.querySelectorAll(".delete-btn").forEach(btn => {
-          if (user.uid === adminUID) {
-            btn.style.display = "inline-block";
-          } else {
-            btn.style.display = "none";
-          }
-        });
-
-      } else {
-        document.getElementById("login-form").style.display = "block";
-        document.getElementById("logout-form").style.display = "none";
-
-        document.querySelectorAll(".delete-btn").forEach(btn => {
-          btn.style.display = "none";
-        });
-      }
-    });
-  </script>
-</body>
-</html>
+    //
 
