--- a/index.html
+++ b/index.html
@@ -7,55 +7,81 @@
 
   <link rel="stylesheet" href="reset.css" />
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
 
   <style>
-    /* 🔹 Botones de login en la esquina superior derecha */
-    .auth-buttons {
+    /* 🔹 Botón login */
+    #authSection {
       position: absolute;
       top: 10px;
-      right: 15px;
+      right: 10px;
       z-index: 2000;
     }
-    .auth-buttons button {
+    #authSection input {
+      padding: 5px;
+      margin: 2px;
+    }
+    #authSection button {
+      padding: 5px 10px;
       margin-left: 5px;
-      padding: 6px 12px;
-      border: none;
-      border-radius: 5px;
-      background: #007bff;
-      color: white;
       cursor: pointer;
     }
-    .auth-buttons button:hover {
-      background: #0056b3;
+
+    /* 🔹 Overlay de comentarios */
+    .comentarios-overlay {
+      position: absolute;
+      top: 15%;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 90%;
+      max-width: 600px;
+      max-height: 70%;
+      overflow-y: auto;
+      background: rgba(0, 0, 0, 0.6);
+      color: white;
+      padding: 10px;
+      border-radius: 8px;
+      z-index: 500;
     }
-    /* 🔹 Caja emergente login */
-    #loginForm {
-      display:none;
-      position:absolute;
-      top:50px;
-      right:10px;
-      background:white;
-      color:black;
-      padding:15px;
-      border:1px solid #ccc;
-      border-radius:8px;
-      z-index:2000;
+    .comentario {
+      background: rgba(255, 255, 255, 0.1);
+      padding: 5px;
+      margin: 5px 0;
+      border-radius: 4px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
-    #loginForm input {
-      width:100%;
-      margin-bottom:8px;
-      padding:6px;
+    .comentario p {
+      margin: 0;
+      flex: 1;
     }
-    #loginForm button {
-      width:100%;
-      padding:6px;
-      background:#28a745;
-      color:white;
-      border:none;
-      border-radius:5px;
+    .comentario button {
+      background: red;
+      color: white;
+      border: none;
+      cursor: pointer;
+      padding: 3px 6px;
+      border-radius: 4px;
+      margin-left: 10px;
+    }
+    textarea {
+      width: 100%;
+      margin-top: 10px;
+    }
+    #formComentario button {
+      margin-top: 5px;
+      padding: 5px 10px;
+      cursor: pointer;
+    }
+
+    header {
+      position: relative;
+      z-index: 1000;
     }
   </style>
 </head>
+
 <body>
   <header>
     <div class="caja">
@@ -71,24 +97,86 @@
         </ul>
       </nav>
     </div>
-    <!-- 🔹 Botones de autenticación -->
-    <div class="auth-buttons">
-      <button id="loginBtn">Iniciar sesión</button>
-      <button id="logoutBtn" style="display:none;">Cerrar sesión</button>
+
+    <!-- 🔹 Login arriba a la derecha -->
+    <div id="authSection">
+      <input type="email" id="email" placeholder="Correo" />
+      <input type="password" id="password" placeholder="Contraseña" />
+      <button onclick="login()">Iniciar sesión</button>
+      <button onclick="logout()" style="display:none;">Cerrar sesión</button>
     </div>
   </header>
 
-  <main>
-    <!-- 🔹 Aquí sigue todo tu contenido (banner, secciones, videos, etc.) -->
-
-    <!-- 🔹 Sección de comentarios -->
-    <section class="comentarios">
+  <!-- Banner con comentarios -->
+  <div style="position: relative;">
+    <img class="banner" src="banner.jpg" alt="Banner principal" />
+    <div class="comentarios-overlay">
       <h3>Comentarios</h3>
-      <form id="comentarioForm">
-        <textarea id="comentarioInput" placeholder="Escribe tu comentario..." required></textarea>
+      <form id="formComentario">
+        <textarea id="nuevoComentario" placeholder="Escribe tu comentario..."></textarea>
         <button type="submit">Enviar</button>
       </form>
-      <ul id="comentariosList"></ul>
+      <div id="listaComentarios"></div>
+    </div>
+  </div>
+
+  <main>
+    <section class="principal">
+      <h2 class="tituloPrincipal">Sobre Vidrio y Aluminio Gomez</h2>
+      <img class="utensilios" src="utensilios[1].jpg" alt="utensilios de un barbero">
+
+      <p>
+        Ubicada en San Pablo Autopan,
+        <strong>Soluciones en Vidrio y Aluminio Gomez</strong> trae para el mercado lo
+        mejor para su hogar y negocio. Fundada en 2008, cuenta con cancelería de aluminio, fachadas y sistemas de cristal templado, entre otras cosas. 
+      </p>
+
+      <p id="mision">
+        <em>
+          Nuestra misión es:
+          <strong>"Proporcionar eficiencia, economía y calidad a nuestros clientes".</strong>
+        </em>
+      </p>
+
+      <p>
+        Ofrecemos profesionales experimentados que están constantemente
+        observando los cambios y movimiento en el mundo de la cancelería, para así
+        ofrecer a nuestros clientes las últimas tendencias. La constante actualización
+        por parte de nuestros trabajadores nos hace brindar excelencia y agilidad, garantizando calidad y
+        satisfacción.
+      </p>
+    </section>
+
+    <section class="mapa">
+      <h3 class="tituloPrincipal">Nuestra Ubicación</h3>
+      <p>Nuestro establecimiento está ubicado en San Pablo Autopan</p>
+      <div class="mapaContenido">
+        <iframe 
+          src="https://www.google.com/maps/embed?pb=!4v1755183114469!6m8!1m7!1sQDyybB8MXeXDPR4yKU0Dsw!2m2!1d19.37172830916202!2d-99.65900973173885!3f253.42477900915722!4f-0.37270352146015284!5f0.7820865974627469"        
+          width="100%" 
+          height="300" 
+          style="border:0;" 
+          allowfullscreen="" 
+          loading="lazy" 
+          referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+      </div>
+    </section>
+
+    <section class="diferenciales">
+      <h3 class="tituloPrincipal">Nuestro Distintivo</h3>
+      <div class="contenidoDiferenciales">
+        <ul class="listaDiferenciales">
+          <li class="items">Atención personalizada</li>
+          <li class="items">Presupuestos flexibles</li>
+          <li class="items">Localización</li>
+          <li class="items">Profesionales calificados</li>
+          <li class="items">Puntualidad</li>
+          <li class="items">Limpieza e higiene</li>
+          <li class="items">Trabajos garantizados</li>
+        </ul>
+        <img src="diferenciales.jpg" class="imagenDiferencial" alt="imagen de trabajos" />
+      </div>
     </section>
   </main>
 
@@ -97,18 +185,10 @@
     <p>Copyright: Todo el material expuesto es propiedad de Vidrio y Aluminio Gomez 2025</p>
   </footer>
 
-  <!-- 🔹 Formulario emergente de login -->
-  <div id="loginForm">
-    <h3>Login Administrador</h3>
-    <input type="email" id="adminEmail" placeholder="Correo">
-    <input type="password" id="adminPassword" placeholder="Contraseña">
-    <button id="submitLogin">Ingresar</button>
-  </div>
-
-  <!-- Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth-compat.js"></script>
 
   <script>
     // 🔹 Configuración Firebase
@@ -125,82 +205,81 @@
     const db = firebase.firestore();
     const auth = firebase.auth();
 
-    const comentarioForm = document.getElementById("comentarioForm");
-    const comentarioInput = document.getElementById("comentarioInput");
-    const comentariosList = document.getElementById("comentariosList");
+    const form = document.getElementById("formComentario");
+    const input = document.getElementById("nuevoComentario");
+    const lista = document.getElementById("listaComentarios");
 
-    // 🔹 Guardar comentario en Firestore
-    comentarioForm.addEventListener("submit", async (e) => {
+    let currentUser = null;
+    const adminEmail = "tu_correo_admin@gmail.com"; // 🔹 cámbialo por tu correo admin
+
+    // Enviar comentario
+    form.addEventListener("submit", async (e) => {
       e.preventDefault();
-      const texto = comentarioInput.value.trim();
-      if (texto !== "") {
+      const texto = (input.value || "").trim();
+      if (!texto) return;
+      try {
         await db.collection("comentarios").add({
           texto,
-          fecha: firebase.firestore.FieldValue.serverTimestamp()
+          timestamp: firebase.firestore.FieldValue.serverTimestamp()
         });
-        comentarioInput.value = "";
+        input.value = "";
+      } catch (err) {
+        console.error("Error al guardar:", err);
       }
     });
 
-    // 🔹 Mostrar comentarios en tiempo real
-    db.collection("comentarios").orderBy("fecha", "desc").onSnapshot((snapshot) => {
-      comentariosList.innerHTML = "";
-      snapshot.forEach((doc) => {
-        const li = document.createElement("li");
-        li.textContent = doc.data().texto;
+    // Mostrar comentarios
+    db.collection("comentarios")
+      .orderBy("timestamp", "desc")
+      .onSnapshot((snap) => {
+        lista.innerHTML = "";
+        snap.forEach((doc) => {
+          const data = doc.data();
+          const div = document.createElement("div");
+          div.className = "comentario";
 
-        // 🔹 Botón eliminar solo si admin logueado
-        if (auth.currentUser) {
-          const btn = document.createElement("button");
-          btn.textContent = "Eliminar";
-          btn.style.marginLeft = "10px";
-          btn.onclick = async () => {
-            await db.collection("comentarios").doc(doc.id).delete();
-          };
-          li.appendChild(btn);
-        }
+          const p = document.createElement("p");
+          p.textContent = data.texto || "";
 
-        comentariosList.appendChild(li);
+          div.appendChild(p);
+
+          // 🔹 Solo admin ve botón eliminar
+          if (currentUser && currentUser.email === adminEmail) {
+            const btn = document.createElement("button");
+            btn.textContent = "❌";
+            btn.onclick = async () => {
+              if (confirm("¿Eliminar este comentario?")) {
+                await db.collection("comentarios").doc(doc.id).delete();
+              }
+            };
+            div.appendChild(btn);
+          }
+
+          lista.appendChild(div);
+        });
       });
-    });
 
-    // 🔹 Manejo login/logout
-    const loginBtn = document.getElementById("loginBtn");
-    const logoutBtn = document.getElementById("logoutBtn");
-    const loginForm = document.getElementById("loginForm");
-    const submitLogin = document.getElementById("submitLogin");
-
-    loginBtn.addEventListener("click", () => {
-      loginForm.style.display = (loginForm.style.display === "none") ? "block" : "none";
-    });
-
-    submitLogin.addEventListener("click", async () => {
-      const email = document.getElementById("adminEmail").value;
-      const password = document.getElementById("adminPassword").value;
-
+    // 🔹 Autenticación
+    async function login() {
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
       try {
         await auth.signInWithEmailAndPassword(email, password);
-        alert("✅ Sesión iniciada como administrador");
-        loginForm.style.display = "none";
-      } catch (error) {
-        alert("❌ Error: " + error.message);
+      } catch (err) {
+        alert("Error al iniciar sesión: " + err.message);
       }
-    });
+    }
 
-    logoutBtn.addEventListener("click", async () => {
-      await auth.signOut();
-      alert("Sesión cerrada");
-    });
+    function logout() {
+      auth.signOut();
+    }
 
-    // 🔹 Cambiar botones según estado
-    auth.onAuthStateChanged(user => {
-      if (user) {
-        loginBtn.style.display = "none";
-        logoutBtn.style.display = "inline-block";
-      } else {
-        loginBtn.style.display = "inline-block";
-        logoutBtn.style.display = "none";
-      }
+    auth.onAuthStateChanged((user) => {
+      currentUser = user;
+      document.querySelector("#authSection input[type=email]").style.display = user ? "none" : "inline-block";
+      document.querySelector("#authSection input[type=password]").style.display = user ? "none" : "inline-block";
+      document.querySelector("#authSection button[onclick='login()']").style.display = user ? "none" : "inline-block";
+      document.querySelector("#authSection button[onclick='logout()']").style.display = user ? "inline-block" : "none";
     });
   </script>
 </body>
