--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
     const lista = document.getElementById("listaComentarios");
 
     let currentUser = null;
-    const adminEmail = "tu_correo_admin@gmail.com"; // 🔹 cámbialo por tu correo admin
+    const adminEmail = "riccardotflores@gmail.com"; // 🔹 cámbialo por tu correo admin
 
     // Enviar comentario
     form.addEventListener("submit", async (e) => {
